trouble/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ng-cip
spec:
  selector:
    app: pi-web-pod
  ports:
    - name: http
      port: 8020
      targetPort: app
      nodePort: 8020
  type: NodePort
